--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,7 @@
       <li><strong>Languages:</strong> Python, Java, C, SQL, JS, HTML, CSS, R</li>
       <li><strong>Tools:</strong> BMC Control-M, Linux, Wireshark, Firebase, MongoDB, React, Node.js, Azure, Tenable (Nessus), Ghidra, Git, Microsoft Access</li>
       <li><strong>Skills:</strong> Enterprise Automation, SDLC, Agile Methodology</li>
+      <li><strong>Certifications:</strong> Comptia Security+, AWS Certified Cloud Practitioner (2025)</li>
     </ul>
   </div>
 
