--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
   <p class="contact">
     East Islip, NY 11730<br>
     631-972-4813 | 📧 brettbonner15@gmail.com | 
-    <a href="https://linkedin.com/in/brettbonner15">LinkedIn</a> |
+    <a href="https://www.linkedin.com/in/brett-bonner-0273b8231/">LinkedIn</a> |
     <a href="https://github.com/BrettBonner">GitHub</a>
   </p>
 
