--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,6 +63,18 @@
 
   <div class="section">
     <h2>Technical Projects and Leadership</h2>
+    <p><strong>Cloud Resume Challenge</strong> – June 2025 </p>
+    <ul>
+      <li>Deployed a live HTML/CSS resume on AWS S3 with CloudFront and HTTPS.
+      <li>Built a serverless API using API Gateway, Lambda, and DynamoDB.</li>
+      <li>Developed a CI/CD pipeline with GitHub Actions and Secrets to automate both frontend and backend deployments.</li>
+    </ul>
+    <p><strong>AWS Rekognition Image Pipeline</strong> – May 2025</p>
+    <ul>
+      <li>Built a serverless pipeline using S3, Lambda, and Rekognition to anaylze uploaded images.</li>
+      <li>Extracted label metadata and stored results in DynamoDB, accessed via API Gateway.</li>
+    </ul>
+    <p>Project Documentation and technical write-ups available at GitHub</p>
     <p><strong>Cybersecurity Club</strong> – January 2024 – May 2025</p>
     <ul>
       <li>Competed in MetaCTFs (Cryptography, Forensics, Web Exploitation, and Reverse Engineering)</li>
